--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "html-pdf-node": "^1.0.8",
     "marked": "^16.0.0",
     "micro": "^10.0.1",
-    "next": "15.0.3",
+    "next": "^16.1.1",
     "nodemailer": "^7.0.4",
     "openai": "^5.8.2",
     "pg": "^8.16.3",
